--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
+beautifulsoup4==4.8.2
 blinker==1.4
+bs4==0.0.1
 certifi==2019.11.28
 chardet==3.0.4
 click==7.1.1
@@ -12,6 +14,7 @@ MarkupSafe==1.1.1
 pkg-resources==0.0.0
 psycopg2==2.8.4
 requests==2.23.0
+soupsieve==2.0
 SQLAlchemy==1.3.15
 urllib3==1.25.8
 Werkzeug==1.0.0
